fix(VPP style): set z-index for map via css for fullscreen on mobile safari

--- a/assets/css/properties_panel/_vehicle_properties_panel.scss
+++ b/assets/css/properties_panel/_vehicle_properties_panel.scss
@@ -1,3 +1,4 @@
+$vpp-header-z-index: 10;
 .m-vehicle-properties-panel {
   display: flex;
   flex: 1 1 auto;
@@ -58,10 +59,15 @@
   flex-direction: column;
   margin-top: 1rem;
   min-height: 320px;
-  z-index: 9;
 
   .m-vehicle-map {
     flex: 1 0 auto;
+    z-index: $vpp-header-z-index - 1;
+  }
+  // Fullscreen on mobile safari not naitively supported - uses 'pseudo-fullscreen' css
+  // Ensure fullscreen VPP map appears above VPP header
+  .m-vehicle-map.leaflet-pseudo-fullscreen {
+    z-index: $vpp-header-z-index + 1;
   }
 }
 
